navbar, header and footer added

--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
   <body>
 
     <nav id="nav">
+        <a href="index.html" class="nav-logo">
+          <img src="/assets/images/icons/logo.png" class="logo" id="header-logo"/>
+          <h1><b>NI</b> Exotics</h1>
+        </a>
+      
       <img src="/assets/images/icons/hamburger-menu-icon.svg" alt="hamburger menu" id="hamburger-icon" onclick="toggleNav()"/>
       <img src="/assets/images/icons/close.svg" alt="close menu" id="close-icon" onclick="toggleNav()"/>
       <ul id="dropdown-nav">
@@ -38,12 +43,19 @@
       </ul>
     </nav>
 
+    <!-- Header -->
     <header>
       
     </header>
 
+    <!-- Main -->
     <main>
     </main>
+
+    <!-- Footer -->
+    <footer>
+      <a href="index.html"><img src="/assets/images/icons/logo.png" class="logo" id="footer-logo"/></a>
+    </footer>
 
   </body>   
 </html>
