tidy up and content added

--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
 
     <!-- Title -->
     <title>NI Exotics | Home</title>
-    <link rel="icon" href="/assets/images/icons/favicon.png" type="image/x-icon">
-    <!-- Favicon attribution - https://www.flaticon.com/free-icons/snake -->
+    <link rel="icon" href="/assets/images/icons/favicon/favicon.ico" type="image/x-icon">
 </head>
 
 
@@ -31,13 +30,13 @@
     <nav id="nav">
         <!-- Logo -->
         <a href="index.html" class="nav-logo">
-            <img src="/assets/images/icons/logo.png" class="logo" id="header-logo" />
+            <img src="/assets/images/icons/logo/logo.png" class="logo" id="header-logo" />
             <h1><b>NI</b> Exotics</h1>
         </a>
 
         <!-- Hamburger Menu -->
-        <img src="/assets/images/icons/hamburger-menu-icon.svg" alt="hamburger menu" id="hamburger-icon" onclick="toggleNav()" />
-        <img src="/assets/images/icons/close.svg" alt="close menu" id="close-icon" onclick="toggleNav()" />
+        <img src="/assets/images/icons/ui/hamburger-menu-icon.svg" alt="hamburger menu" id="hamburger-icon" onclick="toggleNav()" />
+        <img src="/assets/images/icons/ui/close.svg" alt="close menu" id="close-icon" onclick="toggleNav()" />
         <ul id="dropdown-nav">
             <a href="#home">
                 <li class="nav-link" onclick="toggleNav()">Home</li>
@@ -69,7 +68,9 @@
 
         <!-- Welcome -->
         <section id="welcome">
-            <h2>Welcome</h2>
+            <h2>Welcome To The Jungle</h2><br/>
+            <h4>Welcome to Northern Ireland Exotics Sanctuary, home to exotic creatures big and small!</h4><br/>
+            <p>This site is a work in progress, please check in later for more content.</p>
         </section>
 
         <!-- Adoption -->
@@ -97,10 +98,10 @@
     <!------------ Footer ------------>
     <footer>
         <!-- Logo -->
-        <a href="/index.html"><img src="/assets/images/icons/logo.png" class="logo" id="footer-logo" /></a>
+        <a href="/index.html"><img src="/assets/images/icons/logo/logo.png" class="logo" id="footer-logo" /></a>
 
         <!-- Copyright -->
-        <p>Copyright © 2022 NIES</p>
+        <strong>Copyright © 2022 NIES</strong>
     </footer>
 
 </body>
