show/hide the nav when scrolling

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <body>
     <!------- Navigation Menu -------->
-    <nav id="nav">
+    <nav id="navbar">
         <!-- Logo -->
         <a href="index.html" class="nav-logo">
             <img src="/assets/images/icons/logo/logo.png" class="logo" id="header-logo" />
