added content to welcome section

--- a/index.html
+++ b/index.html
@@ -68,10 +68,17 @@
 
         <!-- Welcome -->
         <section id="welcome">
-            <h2>Welcome To The Jungle</h2><br/>
+            <h2>Welcome To The Jungle</h2><br/><br/>
             <h4>Welcome to Northern Ireland Exotics Sanctuary, home to exotic creatures big and small!</h4><br/>
-            <p>This site is a work in progress, please check in later for more content.</p>
+            <p>Here at NI Exotics, we are passionate about the rescue and welfare of reptiles and other
+               exotic creatures. <br/><br/>
+               On this site, you will find plenty of information on how to adopt and care for an exotic animal, 
+               and more about the permanent residents of the anctuary.</p><br/>
         </section>
+
+        <div id="motto-banner">
+            <h3>Rescue, Rehabilitate, <strong>Rehome.</strong></h3>
+        </div>
 
         <!-- Adoption -->
         <section id="adoption">
