tidied up sections

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 
 <html lang="en">
-
-<head>
+  <head>
     <!-- Meta -->
     <meta charset="utf-8" />
-    <meta name="Northern Ireland Exotics Sanctuary" content="Exotic Animal Sanctuary" />
+    <meta
+      name="Northern Ireland Exotics Sanctuary"
+      content="Reptile Adoption Site"
+    />
     <meta url="www.niexoticsanctuary.com" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -17,100 +19,112 @@
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Montserrat+Subrayada&family=Roboto&display=swap&family=Metal+Mania" rel="stylesheet"/>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Metal+Mania&family=Montserrat&family=Roboto&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- Title -->
     <title>NI Exotics | Home</title>
-    <link rel="icon" href="/assets/images/icons/favicon/favicon.ico" type="image/x-icon">
-</head>
+    <link
+      rel="icon"
+      href="/assets/images/icons/favicon/favicon.ico"
+      type="image/x-icon"
+    />
+  </head>
 
-
-<body>
+  <body>
     <!------- Navigation Menu -------->
     <nav id="navbar">
-        <!-- Logo -->
-        <a href="index.html" class="nav-logo">
-            <img src="/assets/images/icons/logo/logo.png" class="logo" id="header-logo" />
-            <h1><b>NI</b> Exotics</h1>
-        </a>
+      <!-- Logo -->
+      <a href="index.html" class="nav-logo">
+        <img
+          src="/assets/images/icons/logo/logo.png"
+          class="logo"
+          id="header-logo"
+        />
+        <h1><b>NI</b> Exotics</h1>
+      </a>
 
-        <!-- Hamburger Menu -->
-        <img src="/assets/images/icons/ui/hamburger-menu-icon.svg" alt="hamburger menu" id="hamburger-icon" onclick="toggleNav()" />
-        <img src="/assets/images/icons/ui/close.svg" alt="close menu" id="close-icon" onclick="toggleNav()" />
-        <ul id="dropdown-nav">
-            <a href="#home">
-                <li class="nav-link" onclick="toggleNav()">Home</li>
-            </a>
-            <a href="#adoption">
-                <li class="nav-link" onclick="toggleNav()">Adoption</li>
-            </a>
-            <a href="#residents">
-                <li class="nav-link" onclick="toggleNav()">Residents</li>
-            </a>
-            <a href="#about">
-                <li class="nav-link" onclick="toggleNav()">About</li>
-            </a>
-            <a href="#contact">
-                <li class="nav-link" onclick="toggleNav()">Contact</li>
-            </a>
-        </ul>
+      <!-- Hamburger Menu -->
+      <img
+        src="/assets/images/icons/ui/hamburger-menu-icon.svg"
+        alt="hamburger menu"
+        id="hamburger-icon"
+        onclick="toggleNav()"
+      />
+      <img
+        src="/assets/images/icons/ui/close.svg"
+        alt="close menu"
+        id="close-icon"
+        onclick="toggleNav()"
+      />
+      <ul id="dropdown-nav">
+        <a href="#home">
+          <li class="nav-link" onclick="toggleNav()">Home</li>
+        </a>
+        <a href="#adoption">
+          <li class="nav-link" onclick="toggleNav()">Adoption</li>
+        </a>
+        <a href="#residents">
+          <li class="nav-link" onclick="toggleNav()">Residents</li>
+        </a>
+        <a href="#about">
+          <li class="nav-link" onclick="toggleNav()">About</li>
+        </a>
+        <a href="#contact">
+          <li class="nav-link" onclick="toggleNav()">Contact</li>
+        </a>
+      </ul>
     </nav>
 
-
     <!------------ Header ------------>
-    <header id="home">
-
-    </header>
-
+    <header id="home"></header>
 
     <!------------- Main ------------->
     <main>
+      <!-- Welcome -->
+      <section id="welcome">
+        <h2>Welcome</h2>
+        <p>
+          <strong>
+            Welcome to Northern Ireland Exotics Sanctuary, home to exotic
+            creatures big and small!
+          </strong>
+        </p>
+        <p>
+          Here at NI Exotics, we are passionate about the rescue and welfare of
+          reptiles and other exotic creatures. <br /><br />
+          On this site, you will find plenty of information on how to adopt and
+          care for an exotic animal, and more about the permanent residents of
+          the sanctuary.
+        </p>
+      </section>
 
-        <!-- Welcome -->
-        <section id="welcome">
-            <h2>Welcome To The Jungle</h2><br/><br/>
-            <h4>Welcome to Northern Ireland Exotics Sanctuary, home to exotic creatures big and small!</h4><br/>
-            <p>Here at NI Exotics, we are passionate about the rescue and welfare of reptiles and other
-               exotic creatures. <br/><br/>
-               On this site, you will find plenty of information on how to adopt and care for an exotic animal, 
-               and more about the permanent residents of the anctuary.</p><br/>
-        </section>
+      <!-- Adoption -->
+      <section id="adoption">
+        <h2>Adoption</h2>
+      </section>
 
-        <div id="motto-banner">
-            <h3>Rescue, Rehabilitate, <strong>Rehome.</strong></h3>
-        </div>
+      <!-- Residents -->
+      <section id="residents">
+        <h2>Residents</h2>
+      </section>
 
-        <!-- Adoption -->
-        <section id="adoption">
-            <h2>Adoption</h2>
-        </section>
+      <!-- About -->
+      <section id="about">
+        <h2>About</h2>
+      </section>
 
-        <!-- Residents -->
-        <section id="residents">
-            <h2>Residents</h2>
-        </section>
-
-        <!-- About -->
-        <section id="about">
-            <h2>About</h2>
-        </section>
-
-        <!-- Contact -->
-        <section id="contact">
-            <h2>Contact</h2>
-        </section>
+      <!-- Contact -->
+      <section id="contact">
+        <h2>Contact</h2>
+      </section>
     </main>
-
 
     <!------------ Footer ------------>
     <footer>
-        <!-- Logo -->
-        <a href="/index.html"><img src="/assets/images/icons/logo/logo.png" class="logo" id="footer-logo" /></a>
-
-        <!-- Copyright -->
-        <strong>Copyright © 2022 NIES</strong>
+      <p>Copyright © 2022 NIES</p>
     </footer>
-
-</body>
-
+  </body>
 </html>
