Added anchor text to social media icons

--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@
             caring &#128154
           </small>
           <ul class="flex-row" id="social-media">
-            <li class="flex-row background-img social-icon" id="facebook"><a class="social-link" href="https://www.facebook.com/NIReptileSanctuary"></a></li>
-            <li class="flex-row background-img social-icon" id="instagram"><a class="social-link" href="https://www.instagram.com/niexoticsanctuary"></a></li>
-            <li class="flex-row background-img social-icon" id="tiktok"><a class="social-link" href="https://www.tiktok.com/niexoticsanctuary"></a></li>
-            <li class="flex-row background-img social-icon" id="linkedin"><a class="social-link" href="https://www.linkedin.com/in/northern-ireland-exotics-sanctuary-138704232"></a></li>
+            <li class="flex-row background-img social-icon" id="facebook"><a class="social-link" href="https://www.facebook.com/NIReptileSanctuary">Facebook</a></li>
+            <li class="flex-row background-img social-icon" id="instagram"><a class="social-link" href="https://www.instagram.com/niexoticsanctuary">Instagram</a></li>
+            <li class="flex-row background-img social-icon" id="tiktok"><a class="social-link" href="https://www.tiktok.com/niexoticsanctuary">Tiktok</a></li>
+            <li class="flex-row background-img social-icon" id="linkedin"><a class="social-link" href="https://www.linkedin.com/in/northern-ireland-exotics-sanctuary-138704232">LinkedIn</a></li>
           </ul>
         </div>
       </section>
