Changed logo font to League Spartan

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Metal+Mania&family=Montserrat&family=Oswald&family=Roboto&display=swap"
+      href="https://fonts.googleapis.com/css2?family=League+Spartan&family=Montserrat&family=Oswald&family=Roboto&display=swap"
       rel="stylesheet"
     />
 
@@ -43,8 +43,7 @@
           class="logo"
           id="header-logo"
         />
-        <h1 id="mobile-title"><b>NI</b> Exotics</h1>
-        <h1 id="full-title"><b>NI</b> Exotic Sanctuary</h1>
+        <h1>Northern Ireland Exotic Sanctuary</h1>
       </a>
 
       <!-- Hamburger Menu -->
@@ -90,10 +89,10 @@
         <div class="flex-col split-div" id="welcome-text">
           <h2>Welcome</h2>
           <p>
-            <strong>
+            <b>
               Welcome to Northern Ireland Exotics Sanctuary, home to exotic
               creatures big and small!
-            </strong>
+            </b>
           </p>
           <p>
             A small, volunteer-run animal shelter based in Portrush, we are
