--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
     <!------- Navigation Menu -------->
     <nav class="flex-row" id="navbar">
       <!-- Logo -->
-      <a href="index.html" class="nav-logo">
+      <a href="index.html" class="nav-logo-cont">
         <img
           src="/assets/images/icons/logo/logo.png"
           class="logo"
-          id="header-logo"
+          id="nav-logo"
         />
         <h1>Northern Ireland Exotic Sanctuary</h1>
       </a>
@@ -79,7 +79,9 @@
     </nav>
 
     <!------------ Header ------------>
-    <header class="banner background-img" id="home"></header>
+    <header class="background-img" id="home">
+      <h2 id="slogan">Rescue Revive <strong>Rehome</strong></h2>
+    </header>
 
     <!------------- Main ------------->
     <main>
@@ -87,7 +89,7 @@
       <section class="flex-col split-grid" id="welcome-section">
         <div class="flex-col split-div" id="welcome-image"></div>
         <div class="flex-col split-div" id="welcome-text">
-          <h2>Welcome</h2>
+          <h3>Welcome</h3>
           <p>
             <b>
               Welcome to Northern Ireland Exotics Sanctuary, home to exotic
@@ -108,26 +110,26 @@
 
       <!-- Adoption -->
       <section class="flex-col" id="adoption-sect">
-        <h2>Adoption</h2>
+        <h3>Adoption</h3>
       </section>
 
       <!-- Residents -->
       <section class="flex-col" id="residents-sect">
-        <h2>Residents</h2>
+        <h3>Residents</h3>
       </section>
 
       <!-- About -->
       <section class="flex-col" id="about-sect">
-        <h2>About Us</h2>
+        <h3>About Us</h3>
       </section>
 
       <!-- Contact -->
       <section class="flex-col" id="contact-sect">
-        <h2>Contact</h2>
+        <h3>Contact</h3>
 
         <!-- Follow Us -->
-        <div class="banner background-img flex-col" id="follow-cont">
-          <h3>Follow Us!</h3>
+        <div class="flex-col background-img" id="follow-cont">
+          <h4>Follow Us!</h4>
           <p>
             Did you know you can find us on social media too? We'd love to hear from you! 
           </p>
